@@ -46,7 +46,7 @@ check-ibis: $(IBISEXE) $(TESTDIR)/-part.txt $(TESTDIR)/rowlist
 	@$(IBISEXE) -d $(TESTDIR) -k "a < 2 || c < 3" -q "where a=0" | if [ `fgrep " produced 2 hits, " - | wc -l` -eq 1 ] ; then $(ECHO) $@ passed test 5; else $(ECHO) $@ did not pass test 5; fi
 	@$(IBISEXE) -d $(TESTDIR) -q "where c < 2" | if [ `fgrep " produced 4 hits, " - | wc -l` -eq 1 ] ; then $(ECHO) $@ passed test 6; else $(ECHO) $@ did not pass test 6; fi
 	@$(IBISEXE) -d $(TESTDIR) -p "c : c>80" > $(TESTDIR)/hist0 && perl -pi -e 's/ in Partition .*//' $(TESTDIR)/hist0 && if [ `diff -w hist0 $(TESTDIR)/hist0 | wc -l` -eq 0 ] ; then $(ECHO) $@ passed test 7; else $(ECHO) $@ did not pass test 7; fi
-	@$(IBISEXE) -d $(TESTDIR) -p "a b : c>50" > $(TESTDIR)/hist1 && perl -pi -e 's/ in Partition .*//' $(TESTDIR)/hist1 && if [ `diff -w hist1 $(TESTDIR)/hist1 | wc -l` -eq 0 ] ; then $(ECHO) $@ passed test 8; else $(ECHO) $@ did not pass test 8; fi
+	@$(IBISEXE) -d $(TESTDIR) -p "joint a b : c>50" > $(TESTDIR)/hist1 && perl -pi -e 's/ in Partition .*//' $(TESTDIR)/hist1 && if [ `diff -w hist1 $(TESTDIR)/hist1 | wc -l` -eq 0 ] ; then $(ECHO) $@ passed test 8; else $(ECHO) $@ did not pass test 8; fi
 	@$(ECHO)
 check-text: $(IBISEXE) $(TESTDIR)/t0/-part.txt
 	@$(IBISEXE) -d $(TESTDIR)/t0 -q "select a, b where c < 10" -o $(TESTDIR)/t0-0 > /dev/null
