@@ -1,25 +1,24 @@
 Column c
 c:  (SHORT) [1.79769e+308, -1.79769e+308], actual range <0, 99>
-cumulative distribution [20] under the condition of "c>80"
-(bound,	# records < bound)
-81,	0
-82,	2
-83,	4
-84,	6
-85,	8
-86,	10
-87,	12
-88,	14
-89,	16
-90,	18
-91,	20
-92,	22
-93,	24
-94,	26
-95,	28
-96,	30
-97,	32
-98,	34
-99,	36
-100,	38
+Histogram [19] under the condition of "c>80"
+(bounds,	# records in bin)
+[81, 82)	2
+[82, 83)	2
+[83, 84)	2
+[84, 85)	2
+[85, 86)	2
+[86, 87)	2
+[87, 88)	2
+[88, 89)	2
+[89, 90)	2
+[90, 91)	2
+[91, 92)	2
+[92, 93)	2
+[93, 94)	2
+[94, 95)	2
+[95, 96)	2
+[96, 97)	2
+[97, 98)	2
+[98, 99)	2
+[99, 100)	2
 
