@@ -1,110 +1,29 @@
-Column a
-a:  (INT) [1.79769e+308, -1.79769e+308], actual range <0, 99>
-cumulative distribution [50] under the condition of "c>50"
-(bound,	# records < bound)
-0,	0
-1,	2
-2,	4
-3,	6
-4,	8
-5,	10
-6,	12
-7,	14
-8,	16
-9,	18
-10,	20
-11,	22
-12,	24
-13,	26
-14,	28
-15,	30
-16,	32
-17,	34
-18,	36
-19,	38
-20,	40
-21,	42
-22,	44
-23,	46
-24,	48
-25,	50
-26,	52
-27,	54
-28,	56
-29,	58
-30,	60
-31,	62
-32,	64
-33,	66
-34,	68
-35,	70
-36,	72
-37,	74
-38,	76
-39,	78
-40,	80
-41,	82
-42,	84
-43,	86
-44,	88
-45,	90
-46,	92
-47,	94
-48,	96
-100,	98
 
-Column b
-b:  (FLOAT) [1.79769e+308, -1.79769e+308], actual range <0, 99>
-cumulative distribution [50] under the condition of "c>50"
-(bound,	# records < bound)
-0,	0
-1,	2
-2,	4
-3,	6
-4,	8
-5,	10
-6,	12
-7,	14
-8,	16
-9,	18
-10,	20
-11,	22
-12,	24
-13,	26
-14,	28
-15,	30
-16,	32
-17,	34
-18,	36
-19,	38
-20,	40
-21,	42
-22,	44
-23,	46
-24,	48
-25,	50
-26,	52
-27,	54
-28,	56
-29,	58
-30,	60
-31,	62
-32,	64
-33,	66
-34,	68
-35,	70
-36,	72
-37,	74
-38,	76
-39,	78
-40,	80
-41,	82
-42,	84
-43,	86
-44,	88
-45,	90
-46,	92
-47,	94
-48,	96
-100,	98
+2D-Joint distribution of a and b from table tmp subject to the condition c>50, # bins 625 on 25 x 25 cells
+0	[0, 1.92) [0, 1.92)	4
+26	[1.92, 3.84) [1.92, 3.84)	4
+52	[3.84, 5.76) [3.84, 5.76)	4
+78	[5.76, 7.68) [5.76, 7.68)	4
+104	[7.68, 9.6) [7.68, 9.6)	4
+130	[9.6, 11.52) [9.6, 11.52)	4
+156	[11.52, 13.44) [11.52, 13.44)	4
+182	[13.44, 15.36) [13.44, 15.36)	4
+208	[15.36, 17.28) [15.36, 17.28)	4
+234	[17.28, 19.2) [17.28, 19.2)	4
+260	[19.2, 21.12) [19.2, 21.12)	4
+286	[21.12, 23.04) [21.12, 23.04)	4
+312	[23.04, 25.92) [23.04, 25.92)	4
+338	[25.92, 27.84) [25.92, 27.84)	4
+364	[27.84, 29.76) [27.84, 29.76)	4
+390	[29.76, 31.68) [29.76, 31.68)	4
+416	[31.68, 33.6) [31.68, 33.6)	4
+442	[33.6, 35.52) [33.6, 35.52)	4
+468	[35.52, 37.44) [35.52, 37.44)	4
+494	[37.44, 39.36) [37.44, 39.36)	4
+520	[39.36, 41.28) [39.36, 41.28)	4
+546	[41.28, 43.2) [41.28, 43.2)	4
+572	[43.2, 45.12) [43.2, 45.12)	4
+598	[45.12, 47.04) [45.12, 47.04)	4
+624	[47.04, 48) [47.04, 48)	2
+  Number of occupied cells = 25, total count = 98, number of rows in tmp = 200
 
